# jakasiiops

./: .gitignore  HACKATHON.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
deployment/windows/: Build-MainServerPackage.ps1
deployment/windows/runtime/: Get-JakasiiOpsStatus.ps1  Install-JakasiiOps.ps1  Run-JakasiiOps.ps1  Start-JakasiiOps.ps1  Stop-JakasiiOps.ps1  Uninstall-JakasiiOps.ps1
docs/: API.md  ARCHITECTURE.md  MAIN_SERVER_DEPLOYMENT.md
fixtures/legacy_mart/: answers.json  schema.json
fixtures/modern_shop/: schema.json
src/jakasii_ops/: __init__.py  actions.py  agent.py  api.py  awareness.py  bootstrap.py  brain.py  cli.py  connectors.py  credentials.py  memory.py  models.py  onboarding.py  proof.py  reasoning.py  runtime.py  situational.py  storage.py  validation.py  workflows.py
tests/: test_actions.py  test_agent.py  test_api.py  test_awareness.py  test_bootstrap.py  test_camera_runtime.py  test_credentials.py  test_deployment_assets.py  test_onboarding.py  test_proof.py  test_runtime.py  test_situational.py  test_sqlserver_connector.py  test_staff_and_verified_connectors.py  test_validation.py  test_workflows.py
