[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "jakasii-ops"
version = "0.1.0"
description = "Headless, self-onboarding verified operations agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Atlay"}]
dependencies = []

[project.optional-dependencies]
firestore = ["firebase-admin>=6.5,<8"]

[project.scripts]
jakasii-ops = "jakasii_ops.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
